tests/golden/invalid_il/unknown_temp.il
il 0.1
func @unknown_temp() -> void {
entry:
  %r = add %u, %u
  ret
}
